src/main/java/org/example/expert/config/error/ServerException.java
package org.example.expert.config.error;

public class ServerException extends RuntimeException {

    public ServerException(String message) {
        super(message);
    }
}
